[package]
name = "p2pnet"
version = "0.1.0"
edition = "2021"
authors = ["Mubelotix <mubelotix@gmail.com>"]

[dependencies]
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.3"
async-channel = "1.6"
async-mutex = "1.3"
futures = "0.3"
rand = "0.8"
tokio = { version = "1.17", features = ["full"] }
rsa = "0.5"
sha2 = "0.9"
aes-gcm = "0.9"
protocol = "3.2"
protocol-derive = "3.2"

[features]
test = []
onlyfive = ["test"]
no-rsa = []
