[package]
name = "tewta"
version = "0.1.0"
edition = "2021"
authors = ["Mubelotix <mubelotix@gmail.com>"]

[dependencies]
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.3"
async-channel = "1.6"
async-mutex = "1.3"
futures = "0.3"
rand = "0.8"
tokio = { version = "1.17", features = ["full"] }
rsa = "0.6.0-pre"
sha2 = "0.10"
sha2-derive = "0.1"
aes-gcm = "0.9"
protocol = "3.2"
protocol-derive = "3.2"

[features]
test = []
no-encryption = []

[[bin]]
name = "simulation"
path = "tests/simulation.rs"
required-features = ["test"]
